# jake

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  data.toml  local_run.sh  nginx.conf  output.html  pyproject.toml  script.py
.github/workflows/: deploy.yaml  hellow.yaml  static.yaml  static.yml
